--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <cdk.version>2.10.0</cdk.version>
         <constructs.version>10.0.59</constructs.version>
         <junit.version>5.7.1</junit.version>
-        <java.version>15</java.version>
+        <maven.compiler.source>15</maven.compiler.source>
+        <maven.compiler.target>15</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -45,8 +46,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
 
@@ -55,7 +56,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>br.com.AwsCdkDemoApp</mainClass>
+                    <mainClass>br.com.aws.cdk.demo.AwsCdkDemoApp</mainClass>
                 </configuration>
             </plugin>
         </plugins>
